[package]
name = "rls"
version = "0.122.1"
authors = ["Nick Cameron <ncameron@mozilla.com>", "The RLS developers"]
description = "Rust Language Server - provides information about Rust programs to IDEs and other tools"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/rls"
categories = ["development-tools"]

